@@ -1,5 +1,8 @@
 2006-12-28  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/print/print-page-layout.c: limit the image size to the
+	printable area.
+
 	* plug-ins/print/print-draw-page.c: commented out unused code.
 
 2006-12-28  Sven Neumann  <sven@gimp.org>
